<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Setting.SettingFragment"
    android:background="@color/color_view">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:scrollbarThumbHorizontal="@color/white"
            android:scrollbarThumbVertical="@color/white"
            android:src="?attr/actionModeCloseDrawable"
            app:maxImageSize="25sp"
            app:rippleColor="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="235dp"
            android:layout_height="61dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/text_SETTING"
            android:textColor="#090101"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/ScrollView_margin"
        android:layout_marginTop="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardView_setting_size">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/paddingTop_setting_icons"
                        android:src="@android:drawable/ic_menu_preferences"
                        android:tint="#040303" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="258dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/paddingStart_settings"
                        android:paddingTop="@dimen/paddingTop_setting_text"
                        android:text="@string/text_setting_general"
                        android:textAlignment="viewStart"
                        android:textColor="#433B3B"
                        android:textSize="@dimen/size_text_settings" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardView_setting_size">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/paddingTop_setting_icons"
                        android:src="@android:drawable/ic_dialog_map"
                        android:tint="#040000" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="258dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/paddingStart_settings"
                        android:paddingTop="@dimen/paddingTop_setting_text"
                        android:text="@string/text_map_view"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/size_text_settings" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_cardView_settings" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardView_setting_size">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="87dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/paddingTop_setting_icons"
                        android:src="@android:drawable/stat_sys_warning"
                        android:tint="#090101" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="314dp"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/paddingStart_settings"
                        android:paddingTop="@dimen/paddingTop_setting_text"
                        android:text="@string/text_notices"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/size_text_settings" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardView_setting_size">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="87dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/paddingTop_setting_icons"
                        android:src="@android:drawable/ic_menu_mylocation"
                        android:tint="#0B0000" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="314dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/paddingStart_settings"
                        android:paddingTop="@dimen/paddingTop_setting_text"
                        android:text="@string/text_area"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/size_text_settings" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_cardView_settings" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardView_setting_size">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/paddingTop_setting_icons"
                        android:src="@android:drawable/ic_menu_myplaces"
                        android:tint="#0E0000" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="258dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/paddingStart_settings"
                        android:paddingTop="@dimen/paddingTop_setting_text"
                        android:text="@string/text_start_session"
                        android:textSize="@dimen/size_text_settings" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_cardView_settings" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardView_setting_size">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/paddingTop_setting_icons"
                        android:src="@android:drawable/ic_dialog_email"
                        android:tint="#090000" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="258dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/paddingStart_settings"
                        android:paddingTop="@dimen/paddingTop_setting_text"
                        android:text="@string/text_inform_problem"
                        android:textSize="@dimen/size_text_settings" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardView_setting_size">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/paddingTop_setting_icons"
                        android:src="@android:drawable/ic_dialog_info"
                        android:tint="#070000" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="258dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/paddingStart_settings"
                        android:paddingTop="@dimen/paddingTop_setting_text"
                        android:text="@string/text_information"
                        android:textSize="@dimen/size_text_settings" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardView_setting_size">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingTop="@dimen/paddingTop_setting_icons"
                        android:src="@android:drawable/sym_action_chat" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="258dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/paddingStart_settings"
                        android:paddingTop="@dimen/paddingTop_setting_text"
                        android:text="@string/text_invite_fiend"
                        android:textSize="@dimen/size_text_settings" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_cardview_setting_end" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_SENDeros"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>